--- a/main.html
+++ b/main.html
@@ -8,6 +8,23 @@
 
 <body>
 	<!-- the entire body must be written by student -->
+
+
+
+
+	<div class="container">
+		<h3 id="h">Please click on the identical tiles to verify that you are not a robot.</h3>
+		<div class="images">
+			<img src="" class="img1" alt="">
+			<img src="" class="img2" alt="">
+			<img src="" class="img3" alt="">
+			<img src="" class="img4" alt="">
+			<img src="" class="img5" alt="">
+		</div>
+		<button id="reset" style="display: none;">Reset</button>
+		<button id="verify" style="display: none;">Verify</button>
+		<p id="para"></p>
+	</div>
     <script type="text/javascript" src="./script.js">
 </script>
 
