--- a/main.html
+++ b/main.html
@@ -13,14 +13,17 @@
 
 
 	<div class="container">
-		<h3 id="h">Please click on the identical tiles to verify that you are not a robot.</h3>
+        <h2>I'm not a robot</h2>
+	
 		<div class="images">
-			<img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQsPuRgVqLKQVs2ULJt_w9N6I9fQP3jG7jZIA&usqp=CAU" class="img1" alt="">
-			<img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQ_fmtLL9TuVNri_0Rnev0K8l9dGDrA5XupPQ&usqp=CAU" class="img2" alt="">
-			<img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcRG9Zv6mphp6IW1QZvvF73wKJY8mZBZ2HiATg&usqp=CAU" class="img3" alt="">
-			<img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcTOeR0G_FmYmxW0eaHHc31_PTWaUrCgzoyCcA&usqp=CAU" class="img4" alt="">
-			<img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcTazfpPo_msQ7VOioH1qa0vz44o-r_gwsaIow&usqp=CAU" class="img5" alt="">
+			<img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQ43dC4TN7IFdNzR3NFBsF5cR76J3wbX1Jp0Q&usqp=CAU" class="img1" alt="">
+			<img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcTnzzEGZ-7r0_J44MGw-uMg6oBlgDpKfrbrXw&usqp=CAU" class="img2" alt="">
+			<img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcR69D1yuYqaKogijIoJyxcNSZz5Pcbha95H7Q&usqp=CAU" class="img3" alt="">
+			<img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQcDnp1cqNnQ_qtqhsQIwhpnxDfd028hVydqA&usqp=CAU" class="img4" alt="">
+			<img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQvjZXEuBkxu15yrVAo232Xpca-gH0adLFhXA&usqp=CAU" class="img5" alt="">
 		</div>
+
+        <h3 id="h">Please click on the identical tiles to verify that you are not a robot.</h3>
 		<button id="reset" style="display: none;">Reset</button>
 		<button id="verify" style="display: none;">Verify</button>
 		<p id="para"></p>
