--- a/main.html
+++ b/main.html
@@ -16,7 +16,7 @@
         <h2>I'm not a robot</h2>
 	
 		<div class="images">
-			<img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQ43dC4TN7IFdNzR3NFBsF5cR76J3wbX1Jp0Q&usqp=CAU" class="img1" alt="">
+			<img   data-ns-test="img1" src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQ43dC4TN7IFdNzR3NFBsF5cR76J3wbX1Jp0Q&usqp=CAU" class="img1" alt="">
 			<img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcTnzzEGZ-7r0_J44MGw-uMg6oBlgDpKfrbrXw&usqp=CAU" class="img2" alt="">
 			<img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcR69D1yuYqaKogijIoJyxcNSZz5Pcbha95H7Q&usqp=CAU" class="img3" alt="">
 			<img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQcDnp1cqNnQ_qtqhsQIwhpnxDfd028hVydqA&usqp=CAU" class="img4" alt="">
