--- a/main.html
+++ b/main.html
@@ -25,7 +25,7 @@
 
         <h3 id="h">Please click on the identical tiles to verify that you are not a robot.</h3>
 		<button id="reset" style="display: none;">Reset</button>
-		<button id="verify" style="display: none;">Verify</button>
+		<button data-ns-test="img1" id="verify" style="display: none;">Verify</button>
 		<p id="para"></p>
 	</div>
     <script type="text/javascript" src="./script.js">
