--- a/main.html
+++ b/main.html
@@ -17,15 +17,15 @@
 	
 		<div class="images">
 			<img   data-ns-test="img1" src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQ43dC4TN7IFdNzR3NFBsF5cR76J3wbX1Jp0Q&usqp=CAU" class="img1" alt="">
-			<img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcTnzzEGZ-7r0_J44MGw-uMg6oBlgDpKfrbrXw&usqp=CAU" class="img2" alt="">
-			<img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcR69D1yuYqaKogijIoJyxcNSZz5Pcbha95H7Q&usqp=CAU" class="img3" alt="">
-			<img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQcDnp1cqNnQ_qtqhsQIwhpnxDfd028hVydqA&usqp=CAU" class="img4" alt="">
-			<img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQvjZXEuBkxu15yrVAo232Xpca-gH0adLFhXA&usqp=CAU" class="img5" alt="">
+			<img  data-ns-test="img2" src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcTnzzEGZ-7r0_J44MGw-uMg6oBlgDpKfrbrXw&usqp=CAU" class="img2" alt="">
+			<img  data-ns-test="img3" src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcR69D1yuYqaKogijIoJyxcNSZz5Pcbha95H7Q&usqp=CAU" class="img3" alt="">
+			<img  data-ns-test="img4" src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQcDnp1cqNnQ_qtqhsQIwhpnxDfd028hVydqA&usqp=CAU" class="img4" alt="">
+			<img  data-ns-test="img5" src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQvjZXEuBkxu15yrVAo232Xpca-gH0adLFhXA&usqp=CAU" class="img5" alt="">
 		</div>
 
         <h3 id="h">Please click on the identical tiles to verify that you are not a robot.</h3>
 		<button id="reset" style="display: none;">Reset</button>
-		<button data-ns-test="img1" id="verify" style="display: none;">Verify</button>
+		<button  id="verify" style="display: none;">Verify</button>
 		<p id="para"></p>
 	</div>
     <script type="text/javascript" src="./script.js">
